Bump to 3.7.1